# rune

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_question.md
docs/: README.md  architecture.md  faq.md  getting-started.md  glossary.md  philosophy.md
docs/development/: audio-bringup.md  camera-bringup.md  debugging.md  e-ink-bringup.md  esp32-coprocessor.md  first-boot.md  iteration-workflow.md  mac-setup.md  prototype-setup.md  raspberry-pi-ui-setup.md  shopping-list.md  voice-pipeline.md
firmware/: README.md  architecture.md  build.md  flash.md
firmware/buildroot/: README.md
firmware/esp32/: README.md
firmware/kernel/: README.md
firmware/userspace/: README.md
firmware/userspace/rune-ui/: ANIMATION.md  Cargo.toml  README.md
firmware/userspace/rune-ui/scripts/: pi-deploy.sh  pi-display-probe.sh  pi-sync.sh  pi-watch.sh
firmware/userspace/rune-ui/src/: animation.rs  app.rs  canvas.rs  display.rs  font.rs  icons.rs  lib.rs  main.rs  screens.rs  theme.rs
firmware/userspace/rune-ui/systemd/: rune-ui.service
hardware/: BOM.md  README.md  wiring.md
hardware/enclosure/: README.md
hardware/enclosure/stl/: README.md
hardware/pcb/: README.md
hardware/schematics/: README.md
